# kasari2sw

./: .gitignore  Cargo.toml  README.md  bacon.toml  build.rs  flash-dfu.sh  memory.x  monitor.sh  rust-toolchain.toml
.cargo/: config.toml
doc/: Diatone_Mamba_F722APP_MK1_pinout.txt  STM32F722_LQFP64_alternate_functions.txt
src/: embedded.rs  lib.rs  sensors.rs
src/platform/rp2350/: log_server.rs  logging.rs  mod.rs  motors.rs  panic_uart.rs  pins.rs  sensors.rs
src/platform/stm32/: blheli_passthrough.rs  console.rs  dshot.rs  dshot_dma.rs  logging.rs  mod.rs  panic_uart.rs  sensors.rs  usb_cdc.rs
src/shared/: algorithm.rs  mod.rs
src/simulator/: app.rs  events.rs  mod.rs  physics.rs  sources.rs
tools/: event_monitor.py  tfa300.py
