[package]
edition = "2021"
name    = "kasarisw"
version = "0.1.0"
resolver = "2"

[[bin]]
name = "kasarisw"
path = "src/platform/stm32/mod.rs"
required-features = ["stm32"]

[[bin]]
name = "simulator"
path = "src/simulator/mod.rs"
required-features = ["pc"]

[[bin]]
name = "kasarisw-rp2350"
path = "src/platform/rp2350/mod.rs"
required-features = ["rp2350"]
# Build: cargo build-rp (alias: --target thumbv8m.main-none-eabihf --features rp2350)
# Flash: elf2uf2-rs convert --family rp2350-arm-s <elf> <uf2>, then copy to BOOTSEL device

[features]
stm32 = ["dep:defmt", "dep:log", "dep:embassy-stm32", "dep:embassy-net"]
pc = ["critical-section/std"]
rp2350 = ["dep:log", "dep:embassy-rp", "dep:cyw43", "dep:cyw43-pio", "dep:embassy-net"]

[dependencies]
critical-section = "1.2.0"
embassy-sync = "0.7.2"
ringbuffer = "0.15.0"
static_cell = "2.1.0"
arrayvec = { version = "0.7.4", default-features = false, features = [] }
num-traits = { version = "0.2.19", default-features = false }
libm = "0.2.8"
defmt = { version = "0.3", optional = true }

[target.'cfg(not(target_os = "none"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }  # For command-line parsing in simulator.rs
eframe = "0.28"  # For the GUI framework
egui_plot = "0.28"  # If needed separately; often bundled with egui/eframe
serde_json = "1.0"  # For JSON parsing
rand = "0.8"
ctrlc = "3.4.5"
crossbeam-channel = "0.5.15"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
alloc-cortex-m = "0.4.4"
portable-atomic = { version = "1.13.1", features = ["critical-section"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.5.0", features = ["tick-hz-1_000_000"] }
embassy-stm32 = { version = "0.5.0", features = ["stm32f722re", "time-driver-any", "exti", "memory-x", "unstable-pac"], optional = true }
embassy-futures = "0.1.2"
embassy-net = { version = "0.8.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"], optional = true }
embedded-io-async = "0.6.1"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-storage = "0.3.1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = "0.8"
log = { version = "0.4", optional = true }
embassy-rp = { version = "0.9.0", features = ["time-driver", "rp235xa", "binary-info"], optional = true }
cyw43 = { version = "0.6.0", features = ["firmware-logs"], optional = true }
cyw43-pio = { version = "0.9.0", optional = true }
embedded-alloc = "0.5"

[profile.dev]
# For debug builds always builds with some optimization
opt-level = 2

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 'z'  # Optimize for size (STM32F722 has 512KB flash)
overflow-checks  = false
